[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/main_color_selector/rgb_selector/rgb_selector.gd" type="Script" id=1]

[node name="RGB" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RSlider" type="HSlider" parent="."]
self_modulate = Color( 1, 0.25098, 0.25098, 1 )
margin_right = 952.0
margin_bottom = 16.0
step = 0.0

[node name="GSlider" type="HSlider" parent="."]
self_modulate = Color( 0.25098, 1, 0.25098, 1 )
margin_top = 20.0
margin_right = 952.0
margin_bottom = 36.0
step = 0.0

[node name="BSlider" type="HSlider" parent="."]
self_modulate = Color( 0.25098, 0.25098, 1, 1 )
margin_top = 40.0
margin_right = 952.0
margin_bottom = 56.0
step = 0.0

[connection signal="value_changed" from="RSlider" to="." method="_on_RSlider_value_changed"]
[connection signal="value_changed" from="GSlider" to="." method="_on_GSlider_value_changed"]
[connection signal="value_changed" from="BSlider" to="." method="_on_BSlider_value_changed"]
